# assertly

./: .gitignore  Cargo.toml  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: prd-ai-agent-service-deploy.yml  prd-assertly-app-deploy.yml  prd-engine-service-deploy.yml  prd-gatekeeper-service-deploy.yml  prd-identity-service-deploy.yml  prd-webdriver-service-deploy.yml
apps/ai-agent-service/: .env.dev  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  package.json  start.sh
apps/assertly-app/: .eslintrc.cjs  README.md  components.json  dev-app-update.yml  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.web.json
apps/assertly-app-old/: README.md  components.json  vite.config.ts
apps/engine-service/: Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  package.json
apps/gatekeeper-service/: Dockerfile  README.md
apps/gatekeeper_service/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile
apps/gatekeeper_service/src/: main.rs  proxy_handler.rs  router.rs  service.rs
apps/identity-service/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml
apps/identity-service/migrations/2024-02-18-080202_initial_tabels/: down.sql  up.sql
apps/identity-service/src/: app.rs  main.rs  router.rs  schema.rs  service.rs
apps/identity-service/src/middlewares/: authorize.rs
apps/identity-service/src/models/: team.rs  user.rs
apps/identity-service/src/modules/: mod.rs
apps/identity-service/src/modules/authn/: authn_controller.rs  authn_service.rs  mod.rs  types.rs
apps/identity-service/src/modules/health/: health_controller.rs
apps/identity-service/src/modules/team/: mod.rs  team_controller.rs  team_service.rs
apps/identity-service/src/modules/user/: mod.rs  user_controller.rs  user_service.rs
apps/identity-service/src/types/: auth.rs  error.rs  mod.rs  token.rs
apps/landing-page/: index.html
apps/webassert-app/: components.json  index.html  package.json  vite.config.ts
infra/: cluster.yaml
(+411 files in other folders)
