[package]
name = "gatekeeper_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.1", features = [
    "add-extension",
    "fs",
    "auth",
    "compression-full",
    "trace",
    "map-request-body",
    "util",
    "cors",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
jsonwebtoken = "9.2.0"
axum = "0.7.4"
anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
