[package]
name = "identity_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.4"
anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.34", features = ["serde"]}
async-openai = "0.18.3"
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.1", features = ["add-extension","fs", "auth", "compression-full", "trace", "map-request-body", "util", "cors"] }
jsonwebtoken = "9.2.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
bcrypt = "0.15.0"
